# FoundationRobotics_LidarPackage

./: README.md  Screencast from 10-17-2024 08:29:26 PM.webm  backup rs codes.odt
Foundation_Robotics/bevy_mod_raycast/examples/: distance_calculate.rs
Foundation_Robotics/turtlebot4/src/turtlebot4_simulator/turtlebot4_ignition_bringup/worlds/: foundation.sdf
turtlebot4-simulator-master/: Cargo.toml
turtlebot4-simulator-master/src/: main.rs  raycast.rs  test.rs
turtlebot4_sim/: Cargo.toml
turtlebot4_sim/src/: camera.rs  main.rs  raycast.rs  turtlebot4.rs
